--- a/USA/16-30.MD
+++ b/USA/16-30.MD
@@ -17,3 +17,50 @@
 * so I can enjoy you all. 让我享受到你们大家的温馨。
 * They shared the first harvest with the Indians 
 * remember the meaning of Thanksgiving.
+* turn the oven on
+
+### 19 Man's Best Friend ACT I
+*absolutely wonderful
+* they're so kind to me
+*a cheeseburger and French fries
+ * The number you are calling -- 555-8448is no longer in service.
+ *  You've lost your family.
+ * It sounded like a dog barking.It sounded like a dog barking right here. 
+
+ ### 20 Man's Best Friend ACT II
+ * Give me your paw. 把脚伸出来。
+ * the American Society for the Prevention of Cruelty to Animals. 美国禁止虐待动物协会。
+ * But if they don't, I'll adopt her. 如果找不到,我就收养她。
+ * She's hard to resist. 真是人见人爱。
+ * She just wants love and affection. 她需要爱和关怀。
+ * We're off to the animal shelter. 我们这就去动物收容所。
+
+ ### 21 Man's Best Friend ACT III
+* References? 证明人?
+* Then you have to fill out this form 然后你要填写这份表格。
+* about your family background. 关于你的家庭背景的。
+* Her eyes look so sad. 她的目光那么忧郁。
+* She must really miss them. 她准是很想主人
+* I will have a cheeseburger, medium rare, 我要一份奶酪汉堡,五分熟的,
+* with raw onion, and french fries, please. 加生洋葱和炸薯条。
+* Anything to drink? 要喝点什么吗?
+* A diet cola, please. 一份健怡可乐。
+* And some have fur.
+
+### 22 You're Going to Be Fine ACT I
+*  I need your special talent for handling special matters.
+* tonsillectomies set  reassurance Everything will be just fine.
+ * He's had so many colds and sore throats recently.
+
+
+ ### 23 You're Going to Be Fine ACT II
+ * charades  clown
+ * Snow White and the Seven Dwarfs.
+ * This is a rough group. 这是一群粗野的孩子。
+ * And you promised me a surprise
+
+ ### 24 You're Going to Be Fine ACT III
+ * All kinds of flavors.Strawberry 草莓 Vanilla 香草  
+ * You need some rest to help you get better quickly.
+ *  we have Popo the Clown to entertain you.
+ * 
