--- a/USA/16-30.MD
+++ b/USA/16-30.MD
@@ -64,3 +64,14 @@
  * You need some rest to help you get better quickly.
  *  we have Popo the Clown to entertain you.
  * 
+### 25 It's Up to You ACT I
+*  the feelings about graduation.  cheering about
+* That's the worst part--making decisions. 最伤脑筋的是做决定
+* Hail to the victors valiant, “向勇敢的胜利者致敬。
+* Hail to the conquering heroes, 向进取的英雄们致敬，
+* Hail, Hail to Michigan, 致敬，向Michigan致敬,
+* The champions of the West!" 西部的优胜者 ！”
+
+### 26 It's Up to You ACT II
+*  the feelings about graduation.  cheering about
+* 
