--- a/USA/16-30.MD
+++ b/USA/16-30.MD
@@ -67,11 +67,34 @@
 ### 25 It's Up to You ACT I
 *  the feelings about graduation.  cheering about
 * That's the worst part--making decisions. 最伤脑筋的是做决定
-* Hail to the victors valiant, “向勇敢的胜利者致敬。
+* Hail to the victors valiant, 向勇敢的胜利者致敬。
 * Hail to the conquering heroes, 向进取的英雄们致敬，
 * Hail, Hail to Michigan, 致敬，向Michigan致敬,
-* The champions of the West!" 西部的优胜者 ！”
+* The champions of the West! 西部的优胜者 ！
 
 ### 26 It's Up to You ACT II
-*  the feelings about graduation.  cheering about
-* 
+* interview footsteps
+* Anything special you want to talk about? 有什么特殊的事要谈吗?
+
+### 27 It's Up to You ACT III
+*  interview footsteps
+* Anything special you want to talk about? 有什么特殊的事要谈吗?
+
+### 28 Smell the Flowers ACT I
+* schedule Day off 
+* To enjoy the simple things in life ... 享受人生乐趣……
+* remind appointment mystery
+
+### 29 Smell the Flowers ACT II
+
+* excited about thirsty  fountain
+* I find myself in an embarrassing situation. 我现在有一件很为难的事
+* and forgot to enter it in my appointment book. 但忘了写到工作日程。
+*  crab salad. 蟹肉色拉。ferryboat 
+*  its hard to explain
+* girls talk
+
+### 30 
+* I decided to forget about my accounting problems 我已决定不再去想那些会计上的问题
+* and just enjoy this beautiful spring day. 尽情享受这美好的春天。
+* go for ride
