--- a/USA/1-15.md
+++ b/USA/1-15.md
@@ -1,13 +1,13 @@
 ### 5 The Blind Date  ACT II
-* A special place for special people. 这是为特殊人物而设的特别地方。
-* What do you recommend today? 今天你推荐什么色拉？
+* A special place for special people. 
+* What do you recommend today? 
 * vice-president 
 * I feel terrible , forgive , stomachace
 ***********
 ### 6 The Blind Date  ACT III
 * sick nervous apartment occasionally, 
 * It was only a tummy ache. 仅仅是肚子有点痛。
-* You two must be close. 你们两个关系一定很好。 
+* You two must be close.  
 
 ***********
 
@@ -29,7 +29,7 @@
 
 * Please look us up. 请跟我们联络。
 * day off
-* I can't wait to see her. 我等不及见她了Pleasant dreams. 祝你做个好梦。
+* I can't wait to see her.  Pleasant dreams. 
 * talented She was kind, intelligent and loveable, like Susan..
 
 ### 10 A Piece of Cake ACT I
@@ -44,7 +44,7 @@
 * You are not speaking clearly.
 * I don't understand your pronunciation.
 * I am in excellent health.
-* You are in great condition. I can't believe it! 你的身体太好了，我简直不敢相信
+* You are in great condition. I can't believe it! 
 
 ### 12 A Piece of Cake ACT III
 * tomatoes, lettuce, cucumbers, and onions. 蕃茄、莴苣、黄瓜、洋葱。
@@ -52,24 +52,24 @@
 * steaks
 * Skip, hop, front. 跳，蹦，向前。 
 * Twist... again.... OK, now... scissors. 扭腰……再来…好，现在……张腿合腿。 
-* This is fun. It's a piece of cake. 有意思，毫不费力。
+* This is fun. It's a piece of cake. 
 * You have lettuce. You can't count it. How much?
 
 ### 13 The Right Magic ACT I fish
 * refrigerator bacon I love crispy bacon. 我喜欢脆的肉。
 * ward. Definitely.
-* We had some good times together. 我们度过许多美好时光。
+* We had some good times together.
 
 ### 14 The Right Magic ACT II
 * the important thing is to get the hook close to the fish
 * The water's pretty deep here. 这儿水相当深。
 * Then you close your eyes and say the magic words. 
-* Fish, fish, send me a fish. 鱼,鱼,给我一条鱼。
+* Fish, fish, send me a fish. 
 * In order to catch fish blanket
 
 ### 15 The Right Magic ACT III
 *  it's going to be all right
-* Wrap him in the blanket, Dad! 用毯子把他裹好,
+* Wrap him in the blanket, 
 * I'm very grateful, 
 * I guess I ruined your day. 我想我今天扫了你的兴了
 * emergency
