--- a/USA/1-15.md
+++ b/USA/1-15.md
@@ -1,7 +1,7 @@
 ### 5 The Blind Date  ACT II
 * A special place for special people. 
 * What do you recommend today? 
-* vice-president 
+* vice-president   errand 
 * I feel terrible , forgive , stomachace
 ***********
 ### 6 The Blind Date  ACT III
