--- a/USA/1-15.md
+++ b/USA/1-15.md
@@ -1,22 +1,48 @@
+### 1 Linden Street
+* photographer.Terrific ambulance drivers
+* Richard
+
+名称| 关系 | 职业|  其他
+---|------|------|------|------|---
+Richard  |he| photographer|1 |
+Marilyn |mother| 0| 0 0|
+Ellen | wife| 0| 0 0| 0| 0
+Robbie | brother| high school |  0| 0
+Susan | sister| worker| 0 0| 
+Alexandra | friend| exchange student| 0 0| 
+
+### 2 Linden Street II
+* I'm taking too much of your time
+* The traffic is very heavy at this hour.
+* lost-and-found office I left my bag of film on the ferry. 
+### 3
+* dessert  vanilla  scoop of   good stuff I'll get it ferryboat
+ * favorite subjects pediatrician. Biology and mathematics. 生物学和数学
+ * you really saved the day for me
+
+ ### 4
+ * dinner Date  parking  baby-sitter.pretty flowers!
+
+
 ### 5 The Blind Date  ACT II
 * A special place for special people. 
-* What do you recommend today? 
+* What do you recommend today?  I'd like a glass of ginger ale with ice. 我要一杯加冰块的姜味汽水
 * vice-president   errand 
-* I feel terrible , forgive , stomachace
-***********
+* I feel terrible , forgive , stomachace go ahead
+
 ### 6 The Blind Date  ACT III
 * sick nervous apartment occasionally, 
 * It was only a tummy ache. 仅仅是肚子有点痛。
-* You two must be close.  
+* You two must be close. 
+* where did the time go? as a matter of fact 
 
-***********
 
 ### 7 Grandpa's Trunk ACT I
 
 * picking him up  independent.
 * It just takes time to feel comfortable in a new place.
 * He's something! 他真了不起！
-* independence. a business trip  Trunk
+* independence. a business trip  Trunk railroad station.
 
 ### 8 Grandpa's Trunk ACT II
 
@@ -24,7 +50,8 @@
 * my destination. 那是我的目的地。.
 * Lots of wonderful memories. 许多美好的回忆。
 * celebrate A construction company. Roads, bridges, big stuff.
-
+* I was in the smoking section. 我原本坐在吸烟的位子。
+* theater 戏院
 ### 9 Grandpa's Trunk ACT III
 
 * Please look us up. 请跟我们联络。
