--- a/USA/31-45.md
+++ b/USA/31-45.md
@@ -1,7 +1,7 @@
 ### 31 A Place of Our Own ACT I 买房 和家里人商量 
 * He's independent, 他的独立性强，and sometimes just stubborn. 近乎顽固
-* ooking for a small house or an apartment 找一个小住宅或公寓
-* pregnant
+* looking for a small house or an apartment 找一个小住宅或公寓
+* pregnant gorgeous  
 
 ### 32 A Place of Our Own ACT II 买房 和中介
 * blond hairs basement
@@ -34,3 +34,28 @@
 * A real inspiration for me. 他给我很大的启发。
 
 ### 37 A Real Stewart ACT I 
+* There's nothing more joyous than the arrival of a new baby.
+* nephew 侄子
+* They can keep a record of all of the important dates 他们可以记录下这个重要的日子
+* Weight: eight pounds six ounces. 体重:八磅六盎司。
+
+### 38 A Real Stewart ACT II 
+* It's so good to have you home again ... 真高兴又回家了......　?
+* and to see Max asleep in his bassinet at home with us. 真高兴看到Max和我们一起睡在家里的摇篮。
+* TLC--tender loving care. TLC----温暖的爱护和关怀。 That's our motto. 这是我们的格言。
+* washcloth
+
+### 39 A Real Stewart ACT III
+* Isn't this baby outfit adorable? 这套婴儿装不是很可爱吗？
+* How can anybody get a word in around here? 在这儿谁有机会插话呢？
+* whisper
+* he is so litter  so new ;
+
+### 40  Playing Games ACT I
+* I can't wait to take a bite of the pumpernickel. 我简直迫不及待想吃一口黑面包。
+* convenient.theater.incredible!  
+* aquarium 我从来没有去过水族馆
+* Natural History. 或自然历史博物馆
+* It looks inviting. 它看起来很令人食欲大开。
+
+### 41 Playing Games ACT II
