--- a/USA/1-15.md
+++ b/USA/1-15.md
@@ -55,7 +55,7 @@ Alexandra | friend| exchange student| 0 0|
 ### 9 Grandpa's Trunk ACT III
 
 * Please look us up. 请跟我们联络。
-* day off
+* day off  be independent
 * I can't wait to see her.  Pleasant dreams. 
 * talented She was kind, intelligent and loveable, like Susan..
 
