--- a/USA/1-15.md
+++ b/USA/1-15.md
@@ -48,7 +48,7 @@ Alexandra | friend| exchange student| 0 0|
 
 * sit by the windown
 * my destination. 那是我的目的地。.
-* Lots of wonderful memories. 许多美好的回忆。
+* Lots of wonderful memories. 
 * celebrate A construction company. Roads, bridges, big stuff.
 * I was in the smoking section. 我原本坐在吸烟的位子。
 * theater 戏院
@@ -60,12 +60,14 @@ Alexandra | friend| exchange student| 0 0|
 * talented She was kind, intelligent and loveable, like Susan..
 
 ### 10 A Piece of Cake ACT I
-* exhausted  nonstop  aerobics 有养运动You are not speaking clearly.
+* exhausted  nonstop  aerobics 有养运动
+* You are not speaking clearly.
 * I don't understand your pronunciation.
-* I am in excellent health.
-* Yeah. Quite a bit different. 是啊。相当不一样。
+* I am in excellent health. advanced  lifting weights
+* Quite a bit different. 是啊。相当不一样。
 * Of Course. Easy. No sweat. 当然。小事情。 绝无问题。
 * It's rough. It's very hard.
+* I'm on my way over. 谢谢，我马上就来。
 
 ### 11 A Piece of Cake ACT II
 * You are not speaking clearly.
@@ -78,18 +80,18 @@ Alexandra | friend| exchange student| 0 0|
 * The main course: steak and potatoes. 主菜：牛排和马铃薯。
 * steaks
 * Skip, hop, front. 跳，蹦，向前。 
-* Twist... again.... OK, now... scissors. 扭腰……再来…好，现在……张腿合腿。 
+* Twist... again.... OK, now... scissors. 扭腰……张腿合腿。 
 * This is fun. It's a piece of cake. 
-* You have lettuce. You can't count it. How much?
+* You have lettuce. You can't count it.
 
 ### 13 The Right Magic ACT I fish
-* refrigerator bacon I love crispy bacon. 我喜欢脆的肉。
+* refrigerator bacon I love crispy bacon. 脆的肉。
 * ward. Definitely.
 * We had some good times together.
 
 ### 14 The Right Magic ACT II
 * the important thing is to get the hook close to the fish
-* The water's pretty deep here. 这儿水相当深。
+* The water's pretty deep here. 
 * Then you close your eyes and say the magic words. 
 * Fish, fish, send me a fish. 
 * In order to catch fish blanket
