--- a/USA/1-15.md
+++ b/USA/1-15.md
@@ -71,14 +71,18 @@ Alexandra | friend| exchange student| 0 0|
 
 ### 11 A Piece of Cake ACT II
 * You are not speaking clearly.
+* complete physical  aerobics class ree.
 * I don't understand your pronunciation.
 * I am in excellent health.
+* Sunrises. Stretch it out. Flat back. 双手捧日。尽量舒展。平背拉回
 * You are in great condition. I can't believe it! 
+* I have ideal blood pressure. A perfect heart. 我血压很正常，心脏也很好
 
 ### 12 A Piece of Cake ACT III
+* Cooking dinner for the entire family is not so easy.
 * tomatoes, lettuce, cucumbers, and onions. 蕃茄、莴苣、黄瓜、洋葱。
 * The main course: steak and potatoes. 主菜：牛排和马铃薯。
-* steaks
+* broccoli 西兰花  groceries 杂货；食品；生活用品
 * Skip, hop, front. 跳，蹦，向前。 
 * Twist... again.... OK, now... scissors. 扭腰……张腿合腿。 
 * This is fun. It's a piece of cake. 
