--- a/USA/1-15.md
+++ b/USA/1-15.md
@@ -106,3 +106,6 @@ Alexandra | friend| exchange student| 0 0|
 * I'm very grateful, 
 * I guess I ruined your day. 我想我今天扫了你的兴了
 * emergency
+            2个2个拿，还剩1个。 3个3个拿，正好拿完。 
+            
+            4个4个拿，还剩1个。 5个5个拿，还剩4个。 6个6个拿，还剩3个。 7个7个拿，正好拿完。 8个8个拿，还剩1个。 9个9个拿，正好拿完。
