--- a/USA/1-15.md
+++ b/USA/1-15.md
@@ -89,8 +89,8 @@ Alexandra | friend| exchange student| 0 0|
 * You have lettuce. You can't count it.
 
 ### 13 The Right Magic ACT I fish
-* refrigerator bacon I love crispy bacon. 脆的肉。
-* ward. Definitely.
+* refrigerator bacon I love crispy bacon. 脆的肉。 baseball 
+* ward. Definitely. I made enough for an army. 我煎了一大堆
 * We had some good times together.
 
 ### 14 The Right Magic ACT II
@@ -106,6 +106,3 @@ Alexandra | friend| exchange student| 0 0|
 * I'm very grateful, 
 * I guess I ruined your day. 我想我今天扫了你的兴了
 * emergency
-            2个2个拿，还剩1个。 3个3个拿，正好拿完。 
-            
-            4个4个拿，还剩1个。 5个5个拿，还剩4个。 6个6个拿，还剩3个。 7个7个拿，正好拿完。 8个8个拿，还剩1个。 9个9个拿，正好拿完。
