--- a/USA/16-30.MD
+++ b/USA/16-30.MD
@@ -1,15 +1,15 @@
 ### 16 Thanksgiving ACT I
 *  the ingredients. 现在,看看配料 
-* apple pie
+* apple pie There's much more to be done.
 * flour sugar butter  walnuts
-* last but not least
+* last but not least  Cinnamon ...桂皮粉  slam the door
 * cabinet powder  cinnamon grocery grouchy
 * Protein, vitamins. 蛋白质,维他命。
 
 ### 17 Thanksgiving ACT II
 * parades balloon recipe
-* Look at those funny-looking clowns. 你看那些滑稽的小丑
-* Taste Ellen's turkey dressing. 尝尝Ellen的火鸡填料
+* Look at those funny-looking clowns. 
+* Taste Ellen's turkey dressing. 
 * Happy Turkey Day.
 
 ### 18 Thanksgiving ACT III
@@ -20,12 +20,12 @@
 * turn the oven on
 
 ### 19 Man's Best Friend ACT I
-*absolutely wonderful
+* absolutely wonderful
 * they're so kind to me
-*a cheeseburger and French fries
- * The number you are calling -- 555-8448is no longer in service.
- *  You've lost your family.
- * It sounded like a dog barking.It sounded like a dog barking right here. 
+* a cheeseburger and French fries
+* The number you are calling -- 555-8448is no longer in service.
+*  You've lost your family.
+* It sounded like a dog barking.It sounded like a dog barking right here. 
 
  ### 20 Man's Best Friend ACT II
  * Give me your paw. 把脚伸出来。
@@ -50,7 +50,7 @@
 ### 22 You're Going to Be Fine ACT I
 *  I need your special talent for handling special matters.
 * tonsillectomies set  reassurance Everything will be just fine.
- * He's had so many colds and sore throats recently.
+* He's had so many colds and sore throats recently.
 
 
  ### 23 You're Going to Be Fine ACT II
