--- a/USA/16-30.MD
+++ b/USA/16-30.MD
@@ -7,17 +7,18 @@
 * Protein, vitamins. 蛋白质,维他命。
 
 ### 17 Thanksgiving ACT II
-* parades balloon recipe
+* parades balloon   recipe
 * Look at those funny-looking clowns. 
 * Taste Ellen's turkey dressing. 
 * Happy Turkey Day.
+* I look forward to seeing you and Harry and Michelle.
 
 ### 18 Thanksgiving ACT III
 * settlers
 * so I can enjoy you all. 让我享受到你们大家的温馨。
 * They shared the first harvest with the Indians 
 * remember the meaning of Thanksgiving.
-* turn the oven on
+* turn the oven on  so patient
 
 ### 19 Man's Best Friend ACT I
 * absolutely wonderful
