--- a/USA/31-45.md
+++ b/USA/31-45.md
@@ -54,8 +54,41 @@
 ### 40  Playing Games ACT I
 * I can't wait to take a bite of the pumpernickel. 我简直迫不及待想吃一口黑面包。
 * convenient.theater.incredible!  
-* aquarium 我从来没有去过水族馆
+* aquarium aquarium
 * Natural History. 或自然历史博物馆
 * It looks inviting. 它看起来很令人食欲大开。
 
 ### 41 Playing Games ACT II
+* Girl Scout
+* you shuffle the deck 首先，你得洗一下牌
+* 
+* 
+* 
+### 42 Playing Games ACT III
+* Girl Scout proposal
+* It's such an important decision.
+* Don't be silly
+*  first things first. 
+* 
+### 43 Second Honeymoon ACT I
+* Second Honeymoon ACT I
+*  you can listen to him over the phone
+* reservation  honeymoon  inn
+* 
+* How is the view?
+
+### 44 Second Honeymoon ACT II
+* Right this way
+* I love walking in the rain. 我喜欢在雨中散步。
+* I think we should face the truth.
+* 
+* How is the view?
+
+### 45 Second Honeymoon ACT III
+* quilt
+* Not on our anniversary. 可不能在我们的结婚纪念日。
+* Let's see ... hotcakes and maple syrup, with scrambled eggs. 让我瞧瞧……烤饼和枫蜜，还有炒蛋。
+* Umm ... smell that coffee ... cinnamon and cloves. 呀……你闻一闻咖啡……一股肉桂和丁香的香味。
+* Homemade buttermilk biscuits. 自治的酸奶脆饼干。
+* 
+* 
