--- a/USA/16-30.MD
+++ b/USA/16-30.MD
@@ -29,10 +29,10 @@
 * It sounded like a dog barking.It sounded like a dog barking right here. 
 
  ### 20 Man's Best Friend ACT II
- * Give me your paw. 把脚伸出来。
+ * Give me your paw. 
  * the American Society for the Prevention of Cruelty to Animals. 美国禁止虐待动物协会。
  * But if they don't, I'll adopt her. 如果找不到,我就收养她。
- * She's hard to resist. 真是人见人爱。
+ * She's hard to resist. 
  * She just wants love and affection. 她需要爱和关怀。
  * We're off to the animal shelter. 我们这就去动物收容所。
 
