--- a/USA/16-30.MD
+++ b/USA/16-30.MD
@@ -22,7 +22,7 @@
 
 ### 19 Man's Best Friend ACT I
 * absolutely wonderful
-* they're so kind to me
+* they're so kind to me  silly  cheer you up  spaniel
 * a cheeseburger and French fries
 * The number you are calling -- 555-8448is no longer in service.
 *  You've lost your family.
