--- a/USA/16-30.MD
+++ b/USA/16-30.MD
@@ -57,7 +57,7 @@
  ### 23 You're Going to Be Fine ACT II
  * charades  clown
  * Snow White and the Seven Dwarfs.
- * This is a rough group. 这是一群粗野的孩子。
+ * This is a rough group. 
  * And you promised me a surprise
 
  ### 24 You're Going to Be Fine ACT III
