--- a/USA/1-15.md
+++ b/USA/1-15.md
@@ -41,8 +41,9 @@ Alexandra | friend| exchange student| 0 0|
 
 * picking him up  independent.
 * It just takes time to feel comfortable in a new place.
-* He's something! 他真了不起！
+* He's something! 他真了不起！ That's for sure.stuff
 * independence. a business trip  Trunk railroad station.
+* She always reminds him of Grandma.
 
 ### 8 Grandpa's Trunk ACT II
 
