--- a/USA/16-30.MD
+++ b/USA/16-30.MD
@@ -25,8 +25,8 @@
 * they're so kind to me  silly  cheer you up  spaniel
 * a cheeseburger and French fries
 * The number you are calling -- 555-8448is no longer in service.
-*  You've lost your family.
-* It sounded like a dog barking.It sounded like a dog barking right here. 
+* You've lost your family.
+* It sounded like a dog barking right here. 
 
  ### 20 Man's Best Friend ACT II
  * Give me your paw. 
@@ -41,7 +41,7 @@
 * Then you have to fill out this form 然后你要填写这份表格。
 * about your family background. 关于你的家庭背景的。
 * Her eyes look so sad. 她的目光那么忧郁。
-* She must really miss them. 她准是很想主人
+* She must really miss them. 
 * I will have a cheeseburger, medium rare, 我要一份奶酪汉堡,五分熟的,
 * with raw onion, and french fries, please. 加生洋葱和炸薯条。
 * Anything to drink? 要喝点什么吗?
@@ -50,9 +50,10 @@
 
 ### 22 You're Going to Be Fine ACT I
 *  I need your special talent for handling special matters.
-* tonsillectomies set  reassurance Everything will be just fine.
+* tonsillectomies set  reassurance [,ri:ə'ʃuərəns] 
 * He's had so many colds and sore throats recently.
-
+* tonsils  Everything will be just fine.
+*  But you just put on your pajamas and robe,
 
  ### 23 You're Going to Be Fine ACT II
  * charades  clown
@@ -63,39 +64,40 @@
  ### 24 You're Going to Be Fine ACT III
  * All kinds of flavors.Strawberry 草莓 Vanilla 香草  
  * You need some rest to help you get better quickly.
- *  we have Popo the Clown to entertain you.
+ *  we have Popo the Clown to entertain you. entertain
  * 
 ### 25 It's Up to You ACT I
 *  the feelings about graduation.  cheering about
 * That's the worst part--making decisions. 最伤脑筋的是做决定
-* Hail to the victors valiant, 向勇敢的胜利者致敬。
-* Hail to the conquering heroes, 向进取的英雄们致敬，
+* Hail to the victors valiant, 
+* Hail to the conquering heroes, 
 * Hail, Hail to Michigan, 致敬，向Michigan致敬,
-* The champions of the West! 西部的优胜者 ！
+* The champions of the West! 西部 ！
 
 ### 26 It's Up to You ACT II
 * interview footsteps
-* Anything special you want to talk about? 有什么特殊的事要谈吗?
+* Anything special you want to talk about? 
 
 ### 27 It's Up to You ACT III
-*  interview footsteps
-* Anything special you want to talk about? 有什么特殊的事要谈吗?
+*  interview footsteps  Journalism interview   footsteps
+* Anything special you want to talk about?  
 
 ### 28 Smell the Flowers ACT I
 * schedule Day off 
-* To enjoy the simple things in life ... 享受人生乐趣……
-* remind appointment mystery
+* To enjoy the simple things in life ... 
+* remind appointment mystery  mystery.  reception room.
 
 ### 29 Smell the Flowers ACT II
 
 * excited about thirsty  fountain
-* I find myself in an embarrassing situation. 我现在有一件很为难的事
-* and forgot to enter it in my appointment book. 但忘了写到工作日程。
-*  crab salad. 蟹肉色拉。ferryboat 
-*  its hard to explain
-* girls talk
+* I find myself in an embarrassing situation. 
+* and forgot to enter it in my appointment book.
+* crab salad. 蟹肉色拉。ferryboat 
+* its hard to explain
+* girls talk  Exit sign folks
 
-### 30 
-* I decided to forget about my accounting problems 我已决定不再去想那些会计上的问题
-* and just enjoy this beautiful spring day. 尽情享受这美好的春天。
+### 30 Smell the Flowers ACT III
+* I decided to forget about my accounting problems 
+* and just enjoy this beautiful spring day. 
 * go for ride
+* carriage
