--- a/USA/31-45.md
+++ b/USA/31-45.md
@@ -1,53 +1,58 @@
 ### 31 A Place of Our Own ACT I 买房 和家里人商量 
-* He's independent, 他的独立性强，and sometimes just stubborn. 近乎顽固
-* looking for a small house or an apartment 找一个小住宅或公寓
-* pregnant gorgeous  
+* He's independent,  sometimes just stubborn. 近乎顽固
+* looking for a small house or an apartment
+* pregnant    History repeate estate agent.
+* gorgeous.
 
 ### 32 A Place of Our Own ACT II 买房 和中介
-* blond hairs basement
-* So I have a good idea about your financial situation. 所以我对你们的的财务状况很了解。
-* double the price bargain
+* blond hairs basement ranch architecture.
+* So I have a good idea about your financial situation. 
+* double the price bargain pediatrician
 
-### 33 A Place of Our Own ACT II 买房 bank
+### 33 A Place of Our Own ACT II  bank
 * mortgage. refinancing occupation  financial details collateral
-* Are you prepared to make a ten-percent down payment? 你打算缴纳10%做头期款吗？
+* Are you prepared to make a ten-percent down payment? 
 * I want to be able to handle it alone
 * Everybody needs help sometimes, Richard. 
 * Talking to the real-estate agent.
+* Talking to the real-estate agent.
+* very good buy  time passes so quickly.
 
-### 34 You're Tops  ACT II  找工作
+### 34 You're Tops  ACT II  
 * exhausted. Frankly,construction field restless  retire
 * energy bored a job for kind
 * I prepared lamb chops,
-* mashed potatoes, and a tossed green salad to begin with. 马铃薯泥,还有蔬菜色拉当头道菜。
+* mashed potatoes, and a tossed green salad to begin with. 
+* 
 
 ### 35 You're Tops  ACT II 内推
-*  sketches 
+* sketches doll
 * I can always depend on you,
-* so experienced in the construction trade, 在建筑这一行业经验丰富,
-* he could be so valuable. 他或许能够有用。
+* so experienced in the construction trade, 
+* he could be so valuable. 
 
 ### 36 You're Tops  ACT III 面试
 * That's music to my ears. 正合我意。
-* T-O-P-S--means Talented Older People's Society. T-O-P-S 全名是优秀老人协会。
-* fantastic,
-* A real inspiration for me. 他给我很大的启发。
+* T-O-P-S--means Talented Older People's Society. T-O-P-S 
+* fantastic,foreman
+* A real inspiration for me. 
 
 ### 37 A Real Stewart ACT I 
 * There's nothing more joyous than the arrival of a new baby.
-* nephew 侄子
-* They can keep a record of all of the important dates 他们可以记录下这个重要的日子
-* Weight: eight pounds six ounces. 体重:八磅六盎司。
+* nephew 侄子 adorable
+* They can keep a record of all of the important dates 
+* Weight: eight pounds six ounces. 。
 
 ### 38 A Real Stewart ACT II 
-* It's so good to have you home again ... 真高兴又回家了......　?
-* and to see Max asleep in his bassinet at home with us. 真高兴看到Max和我们一起睡在家里的摇篮。
-* TLC--tender loving care. TLC----温暖的爱护和关怀。 That's our motto. 这是我们的格言。
+* It's so good to have you home again ...
+* and to see Max asleep in his bassinet at home with us.。
+* TLC--tender loving care. TLC----
+* That's our motto. 这是我们的格言。
 * washcloth
 
 ### 39 A Real Stewart ACT III
-* Isn't this baby outfit adorable? 这套婴儿装不是很可爱吗？
-* How can anybody get a word in around here? 在这儿谁有机会插话呢？
+* Isn't this baby outfit adorable? 
+* How can anybody get a word in around here? ？
 * whisper
 * he is so litter  so new ;
 
