--- a/USA/31-45.md
+++ b/USA/31-45.md
@@ -95,5 +95,5 @@
 * Let's see ... hotcakes and maple syrup, with scrambled eggs. 让我瞧瞧……烤饼和枫蜜，还有炒蛋。
 * Umm ... smell that coffee ... cinnamon and cloves. 呀……你闻一闻咖啡……一股肉桂和丁香的香味。
 * Homemade buttermilk biscuits. 自治的酸奶脆饼干。
-* 
+* Compliments 
 * 
