--- a/USA/1-15.md
+++ b/USA/1-15.md
@@ -23,7 +23,8 @@ Alexandra | friend| exchange student| 0 0|
  ### 4
  * dinner Date  parking  baby-sitter.pretty flowers!
 
-
+smart young  lady and very nice 
+deciduous scope 
 ### 5 The Blind Date  ACT II
 * A special place for special people. 
 * What do you recommend today?  I'd like a glass of ginger ale with ice. 我要一杯加冰块的姜味汽水
